Build Error mit der Filetype Association behoben